--- a/src/developer/web-api/i18n.md
+++ b/src/developer/web-api/i18n.md
@@ -148,7 +148,7 @@ Send PUT request to `api/dataElements/{dataElementUID}` with full object payload
 }
 ```
 
-The status code will be `204 No Content` if the data value was successfully saved or updated, or `404 Not Found` if there was a validation error (e.g. more than one `SHORT_NAME` for the same `locale`).
+The status code will be `204 No Content` if the data value was successfully saved or updated, or `409 Conflict` if there was a validation error (e.g. more than one `SHORT_NAME` for the same `locale`).
 
 The common properties which support translations are listed in the table below.
 
