chore: added HTTP response codes for /translations (#1017)
* chore: added HTTP response codes for /translations

* Update src/developer/web-api/i18n.md

Co-authored-by: Philip-Larsen-Donnelly <35666657+Philip-Larsen-Donnelly@users.noreply.github.com>

--- a/src/developer/web-api/i18n.md
+++ b/src/developer/web-api/i18n.md
@@ -85,9 +85,9 @@ You can also get only the `translations` property of an object by sending a GET 
 }
 ```
 
-### Create a translations
+### Create/Update translations
 
-You can create a translation by sending a PUT request with same JSON format to `api/dataElements/{dataElementUID}/translations`
+You can create translations by sending a PUT request with same JSON format to `api/dataElements/{dataElementUID}/translations`
 
 ```json
 {
@@ -147,6 +147,8 @@ Send PUT request to `api/dataElements/{dataElementUID}` with full object payload
   ]
 }
 ```
+
+The status code will be `204 No Content` if the data value was successfully saved or updated, or `409 Conflict` if there was a validation error (e.g. more than one `SHORT_NAME` for the same `locale`).
 
 The common properties which support translations are listed in the table below.
 
